@@ -408,3 +408,6 @@
 	under ALSA.
 2018-08-30 Fred Gleason <fredg@paravelsystems.com>
 	* Updated 'INSTALL'.
+2018-08-31 Fred Gleason <fredg@paravelsystems.com>
+	* Updated to accomodate the rename of the Rivendell-C-API
+	to 'rivwebcapi'.
